// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation option dart-sass: errors 1`] = `Array []`;

exports[`implementation option dart-sass: warnings 1`] = `Array []`;

exports[`implementation option node-sass: errors 1`] = `Array []`;

exports[`implementation option node-sass: warnings 1`] = `Array []`;

exports[`implementation option not specify: errors 1`] = `Array []`;

exports[`implementation option not specify: warnings 1`] = `Array []`;

exports[`implementation option should not swallow an error when trying to load a sass implementation: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Some error",
]
`;

exports[`implementation option should not swallow an error when trying to load a sass implementation: warnings 1`] = `Array []`;

exports[`implementation option should throw an error on an unknown sass implementation: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation \\"strange-sass\\".",
]
`;

exports[`implementation option should throw an error on an unknown sass implementation: warnings 1`] = `Array []`;

exports[`implementation option should throw an error when the "info" is unparseable #2: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Node Sass version 1 is incompatible with ^4.0.0 || ^5.0.0 || ^6.0.0.",
]
`;

exports[`implementation option should throw an error when the "info" is unparseable #2: warnings 1`] = `Array []`;

exports[`implementation option should throw an error when the "info" is unparseable: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation \\"asdfj\\".",
]
`;

exports[`implementation option should throw an error when the "info" is unparseable: warnings 1`] = `Array []`;

exports[`implementation option should throw an error when the "node-sass" package is an incompatible version: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Node Sass version 3.0.0 is incompatible with ^4.0.0 || ^5.0.0 || ^6.0.0.",
]
`;

exports[`implementation option should throw an error when the "node-sass" package is an incompatible version: warnings 1`] = `Array []`;

exports[`implementation option should throw an error when the "sass" package is an incompatible version: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Dart Sass version 1.2.0 is incompatible with ^1.3.0.",
]
`;

exports[`implementation option should throw an error when the "sass" package is an incompatible version: warnings 1`] = `Array []`;

exports[`implementation option should throw error when the "info" does not exist: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation.",
]
`;

exports[`implementation option should throw error when the "info" does not exist: warnings 1`] = `Array []`;
